--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,23 @@
         margin: 30px 15px;
     }
 }
+.spotlight{
+    .slick-slider{
+        height: 400px;
+
+        .slick-prev{
+            top: 40%;
+            left: 10%;
+            z-index: 1;
+        }
+        .slick-next{
+            top: 40%;
+            right: 10%;
+            z-index: 1;
+        }
+        .slick-prev:before, .slick-next:before{
+            font-size: 40px;
+            color: #5c5b5b;
+        }
+}
+}
